all component work

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,5 +9,6 @@
     <string name="des_open">open</string>
     <string name="des_close">close</string>
     <string name="it_s_just_for_test">Navigation</string>
+    <string name="hi_mohammad">Hi Mohammad</string>
 
 </resources>
